@@ -1,6 +1,6 @@
 package com.datastax.spark.connector.util
 
-import com.datastax.spark.connector.cql.{AuthConf, CassandraConnectorConf}
+import com.datastax.spark.connector.cql.{AuthConfFactory, CassandraConnectionFactory, AuthConf, CassandraConnectorConf}
 import com.datastax.spark.connector.rdd.ReadConf
 import com.datastax.spark.connector.writer.WriteConf
 import org.apache.commons.configuration.ConfigurationException
@@ -16,11 +16,14 @@ object ConfigCheck {
   val MatchThreshold = 0.85
   val Prefix = "spark.cassandra."
 
-  val validProps =
+  /** Set of valid static properties hardcoded in the connector.
+    * Custom CassandraConnectionFactory and AuthConf properties are not listed here. */
+  val validStaticProperties =
     WriteConf.Properties ++
     ReadConf.Properties ++
     CassandraConnectorConf.Properties ++
-    AuthConf.Properties
+    CassandraConnectionFactory.Properties ++
+    AuthConfFactory.Properties
 
 
   /**
@@ -29,7 +32,11 @@ object ConfigCheck {
    * @param conf SparkConf object to check
    */
   def checkConfig(conf: SparkConf): Unit = {
-    val unknownProps = getUnknownProperties(conf)
+    val connectionFactory = CassandraConnectionFactory.fromSparkConf(conf)
+    val authConfFactory = AuthConfFactory.fromSparkConf(conf)
+    val extraProps = connectionFactory.properties ++ authConfFactory.properties
+
+    val unknownProps = getUnknownProperties(conf, extraProps)
     if (unknownProps.nonEmpty) {
       val suggestions =
         for {
@@ -40,7 +47,8 @@ object ConfigCheck {
     }
   }
 
-  def getUnknownProperties(conf: SparkConf): Seq[String] = {
+  def getUnknownProperties(conf: SparkConf, extraProps: Set[String] = Set.empty): Seq[String] = {
+    val validProps = validStaticProperties ++ extraProps
     val scEnv = for ((key, value) <- conf.getAll if key.startsWith(Prefix)) yield key
     for (key <- scEnv if !validProps.contains(key)) yield key
   }
@@ -56,9 +64,10 @@ object ConfigCheck {
    *
    * Fuzziness is determined by MatchThreshold
    */
-  def getSuggestedVars(unknownProp: String): Option[Seq[String]] = {
+  def getSuggestedVars(unknownProp: String, extraProps: Set[String] = Set.empty): Option[Seq[String]] = {
+    val validProps = validStaticProperties ++ extraProps
     val unknownFragments = unknownProp.stripPrefix(Prefix).split("\\.")
-    val suggestions = validProps.filter { knownProp =>
+    val suggestions = validProps.toSeq.filter { knownProp =>
       val knownFragments = knownProp.stripPrefix(Prefix).split("\\.")
       unknownFragments.forall { unknown =>
         knownFragments.exists { known =>
